testsuite/tests/typecheck/should_fail/T14904a.stderr

T14904a.hs:9:6: error:
    • Expected kind ‘forall (a :: k1). g a’, but ‘f’ has kind ‘k0’
      Cannot instantiate unification variable ‘k0’
      with a kind involving polytypes: forall (a :: k1). g a
    • In the first argument of ‘F’, namely ‘(f :: forall a. g a)’
      In the type family declaration for ‘F’
